projects/examples/source/06.13.cxx
///////////////////////////////////////////////////////////////////

module;

///////////////////////////////////////////////////////////////////

#if defined(NO_TRACE)

#define TRACE(scope, string) ;

#else

#define TRACE(scope, string) std::print("{} : {}\n", scope, string)

#endif

///////////////////////////////////////////////////////////////////

export module library;

///////////////////////////////////////////////////////////////////

export import library.submodule;

///////////////////////////////////////////////////////////////////

import <print>;

///////////////////////////////////////////////////////////////////

export namespace library
{
	void test_v1();

//  -------------------------------------

	void test_v2() 
	{ 
		std::print("library::test_v2\n");
	}
}

///////////////////////////////////////////////////////////////////

// module : private; // error

///////////////////////////////////////////////////////////////////

namespace library
{
	void test_v3() 
	{ 
		std::print("library::test_v3\n");
	}
}

///////////////////////////////////////////////////////////////////